# weatherdata

./: .env.example  .gitignore  README.md  docker-compose.yml  weather_stats.py  weatherdata-setup-guide-final.md
caddy/: Caddyfile
fetcher/: .env.example  .gitignore  Dockerfile  README.md  docker-compose-fetcher.yml  pyproject.toml  requirements.txt
fetcher/src/weatherfetcher/: __init__.py  __main__.py  config.py  db.py  fetcher.py  models.py  parser.py
fetcher/tests/: __init__.py
mongo-init/: 01-init-users.js
scripts/: backup.sh  create-indexes.js
weather-api/: Dockerfile  README.md  docker-compose-service.yml  requirements.txt
weather-api/src/weather_api/: __init__.py  main.py
